fix:overflow - fixed overflow created by blobs and icons

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -13,7 +12,6 @@ body {
   height: 100%;
 }
 nav {
-  position: fixed;
   top: 0;
   left: 0;
   z-index: 999;
@@ -186,10 +184,10 @@ footer {
   z-index: -1;
 }
 
-.bg-light{
-  background: #FAF8F8;
+.bg-light {
+  background: #faf8f8;
 }
-.bg-dark{
+.bg-dark {
   background: #1f2122;
 }
 
@@ -202,19 +200,37 @@ footer {
   .top-5 {
     margin-top: 10%;
   }
-  .sm-flex-col{
+  .sm-flex-col {
     flex-direction: column;
   }
-  .sm-w-100{
+  .sm-w-100 {
     width: 100% !important;
   }
-  .sm-none{
+  .sm-none {
     display: none;
   }
-  .profile{
+  .profile {
     display: none;
   }
-  .sm-text-xl{
+  .sm-text-xl {
     font-size: 2rem !important;
+  }
+  .sm-px-1 {
+    padding: 1rem !important;
+  }
+  .sm-px-2 {
+    padding: 20px !important;
+  }
+  .blob-1{
+    display: none;
+  }
+  .blob-2{
+    display: none;
+  }
+  .blob-3{
+    display: none;
+  }
+  .icons{
+    display: none;
   }
 }
